# simple-haskell-app

./: Dockerfile  README.md  simple-haskell-app.cabal
scripts/: build
src/: Main.hs
