name:                simple-haskell-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple-haskell-app#readme
license:             AllRightsReserved
author:              Ken Ding
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple-haskell-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wai,
                       warp,
                       http-types,
                       bytestring,
                       wai-extra,
                       uuid
